# VulkanMock

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md
Include/: vk_mock.h
Scripts/: gen_icd.py  gen_version.py
Source/: vk_mock_buffer.h  vk_mock_command_buffer.cpp  vk_mock_command_buffer.h  vk_mock_command_pool.h  vk_mock_device.cpp  vk_mock_device.h  vk_mock_device_memory.h  vk_mock_icd.cpp  vk_mock_icd.h  vk_mock_icd.json.in  vk_mock_icd.rc.in  vk_mock_icd_helpers.cpp  vk_mock_icd_helpers.h  vk_mock_image.h  vk_mock_instance.cpp  vk_mock_instance.h  vk_mock_physical_device.cpp  vk_mock_physical_device.h  vk_mock_query_pool.h  vk_mock_queue.cpp  vk_mock_queue.h  vk_mock_surface.h  vk_mock_swapchain.h
Tests/: vk_mock_icd_tests.cpp
